style/style.scss
@import 'branding';
@import 'theme';
body {
  color: $color-black;
  background: $color-black;
  // font-family: 'Oxygen Mono',;
  font-family: 'Poiret One', cursive;
  font-size: 16px;
  .code-hero {
    background-color: $color-black;
    color: $color-white;
    overflow: hidden;
    width: 100%;
    position: relative;
    .code-typing-container {
      height: 300px;
      overflow: auto;
    }
    .hero-title {
      position: absolute;
      transform: translateY(-50%);
      top: 50%;
      left: 0;
      right: 0;
      margin: auto;
      text-align: center;
      font-family: 'Poiret One', cursive;
      font-weight: 900;
      font-size: 3em;
      color: $color-primary;
      z-index: 200;
    }
    .hero-shadow-panel {
      content: ' ';
      background: $color-black;
      width: 400px;
      top: 50%;
      left: 0;
      right: 0;
      margin: auto;
      transform: translateY(-50%);
      height: 100px;
      display: block;
      position: absolute;
      z-index: 99;
      opacity: 0.8;
    }
    code {
      background-color: transparent;
      color: inherit;
      font-family: 'Inconsolata', 'Menlo', 'Monaco', 'Consolas';
      opacity: 0.3;
    }
    .typed-cursor {
      opacity: 1;
      -webkit-animation: blink 0.7s infinite;
      -moz-animation: blink 0.7s infinite;
      animation: blink 0.7s infinite;
    }
  }
  .info-cells {
    > div {
      &:first-child {
        background: $color-primary;
        color: $color-white;
      }
      &:nth-child(2) {
        background: $color-alt1;
        color: $color-white;
      }
      &:last-child {
        background: $color-alt2;
        color: $color-white;
      }
      > i {
        font-size: 5em;
        text-align: center;
        display: block;
      }
      > h2 {
        text-align: center;
      }
    }
  }
}
@keyframes blink {
  0% {
    opacity: 1;
  }
  50% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}
@-webkit-keyframes blink {
  0% {
    opacity: 1;
  }
  50% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}
@-moz-keyframes blink {
  0% {
    opacity: 1;
  }
  50% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}
 ::-webkit-scrollbar {
  width: 12px;
  /* for vertical scrollbars */
  height: 12px;
  /* for horizontal scrollbars */
}
 ::-webkit-scrollbar-track {
  background: rgba($color-black, 0.1);
}
 ::-webkit-scrollbar-thumb {
  background: rgba(darken($color-black, 20%), 0.5);
}

